fix test from exception message change